// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel styles should not render without slides data 1`] = `null`;

exports[`Carousel styles should render with children as a function 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(102%);
    -ms-transform: translateX(102%);
    transform: translateX(102%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(102%);
    -ms-transform: translateX(102%);
    transform: translateX(102%);
  }
}

.circuit-63 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-10 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-8 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-6 {
  width: 100%;
}

.circuit-4 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #FAFBFC;
}

.circuit-1 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-1 img {
  object-fit: cover;
}

.circuit-22 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-34 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-61 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-40 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (min-width:480px) {
  .circuit-40 {
    font-size: 16px;
    line-height: 24px;
  }
}

@media (max-width:479px) {
  .circuit-40 {
    font-size: 13px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-40 {
    margin-right: 12px;
  }
}

.circuit-42 {
  width: 100%;
  height: 2px;
  overflow: hidden;
  background-color: #EEF0F2;
  border-radius: 5px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-42:after {
  content: '';
  display: block;
  background-color: #0F131A;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  height: 100%;
}

.circuit-59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-59 {
    margin-left: 12px;
  }
}

.circuit-47 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: #D8DDE1;
  width: 32px;
  height: 32px;
  padding: 0;
  overflow: hidden;
  border-radius: 50%;
  margin-left: 8px;
}

.circuit-47:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-47:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-47:hover {
  background-color: #D8DDE1;
}

.circuit-47:hover,
.circuit-47:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-47[href] {
  display: inline-block;
}

.circuit-47:disabled,
.circuit-47[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-47:first-of-type {
  margin-left: 0;
}

.circuit-47:active,
.circuit-47:focus,
.circuit-47:hover {
  padding: 0;
}

@media (max-width:479px) {
  .circuit-47 {
    width: 24px;
    height: 24px;
  }

  .circuit-47 svg {
    width: 25%;
  }
}

.circuit-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  aria-label="gallery"
  class="circuit-63 circuit-64"
>
  <div
    class="circuit-36 circuit-37"
  >
    <div
      class="circuit-10 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="doggy"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/600"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-22 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="doggy dog"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/700"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-34 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="woof woof"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/800"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-61 circuit-62"
  >
    <p
      class="circuit-38 circuit-39 circuit-40 circuit-41"
    >
      1
       / 
      3
    </p>
    <div
      class="circuit-42 circuit-43"
    />
    <div
      class="circuit-59 circuit-60"
    >
      <button
        aria-label="pause"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 5l14 14m0-14L5 19"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label="previous"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 8l-4 4 4 4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label="next"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 16l4-4-4-4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <h1>
    Carousel heading for step #
    0
  </h1>
</div>
`;

exports[`Carousel styles should render with children as a node 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(102%);
    -ms-transform: translateX(102%);
    transform: translateX(102%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(102%);
    -ms-transform: translateX(102%);
    transform: translateX(102%);
  }
}

.circuit-63 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-10 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-8 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-6 {
  width: 100%;
}

.circuit-4 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #FAFBFC;
}

.circuit-1 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-1 img {
  object-fit: cover;
}

.circuit-22 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-34 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-61 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-40 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (min-width:480px) {
  .circuit-40 {
    font-size: 16px;
    line-height: 24px;
  }
}

@media (max-width:479px) {
  .circuit-40 {
    font-size: 13px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-40 {
    margin-right: 12px;
  }
}

.circuit-42 {
  width: 100%;
  height: 2px;
  overflow: hidden;
  background-color: #EEF0F2;
  border-radius: 5px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-42:after {
  content: '';
  display: block;
  background-color: #0F131A;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  height: 100%;
}

.circuit-59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-59 {
    margin-left: 12px;
  }
}

.circuit-47 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: #D8DDE1;
  width: 32px;
  height: 32px;
  padding: 0;
  overflow: hidden;
  border-radius: 50%;
  margin-left: 8px;
}

.circuit-47:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-47:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-47:hover {
  background-color: #D8DDE1;
}

.circuit-47:hover,
.circuit-47:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-47[href] {
  display: inline-block;
}

.circuit-47:disabled,
.circuit-47[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-47:first-of-type {
  margin-left: 0;
}

.circuit-47:active,
.circuit-47:focus,
.circuit-47:hover {
  padding: 0;
}

@media (max-width:479px) {
  .circuit-47 {
    width: 24px;
    height: 24px;
  }

  .circuit-47 svg {
    width: 25%;
  }
}

.circuit-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  aria-label="gallery"
  class="circuit-63 circuit-64"
>
  <div
    class="circuit-36 circuit-37"
  >
    <div
      class="circuit-10 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="doggy"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/600"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-22 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="doggy dog"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/700"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-34 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="woof woof"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/800"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-61 circuit-62"
  >
    <p
      class="circuit-38 circuit-39 circuit-40 circuit-41"
    >
      1
       / 
      3
    </p>
    <div
      class="circuit-42 circuit-43"
    />
    <div
      class="circuit-59 circuit-60"
    >
      <button
        aria-label="pause"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 5l14 14m0-14L5 19"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label="previous"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 8l-4 4 4 4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label="next"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 16l4-4-4-4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <h1>
    Carousel heading
  </h1>
</div>
`;

exports[`Carousel styles should render with default paused styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(102%);
    -ms-transform: translateX(102%);
    transform: translateX(102%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(102%);
    -ms-transform: translateX(102%);
    transform: translateX(102%);
  }
}

.circuit-63 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-10 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-8 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-6 {
  width: 100%;
}

.circuit-4 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #FAFBFC;
}

.circuit-1 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-1 img {
  object-fit: cover;
}

.circuit-22 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-34 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-61 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-40 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (min-width:480px) {
  .circuit-40 {
    font-size: 16px;
    line-height: 24px;
  }
}

@media (max-width:479px) {
  .circuit-40 {
    font-size: 13px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-40 {
    margin-right: 12px;
  }
}

.circuit-59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-59 {
    margin-left: 12px;
  }
}

.circuit-47 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: #D8DDE1;
  width: 32px;
  height: 32px;
  padding: 0;
  overflow: hidden;
  border-radius: 50%;
  margin-left: 8px;
}

.circuit-47:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-47:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-47:hover {
  background-color: #D8DDE1;
}

.circuit-47:hover,
.circuit-47:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-47[href] {
  display: inline-block;
}

.circuit-47:disabled,
.circuit-47[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-47:first-of-type {
  margin-left: 0;
}

.circuit-47:active,
.circuit-47:focus,
.circuit-47:hover {
  padding: 0;
}

@media (max-width:479px) {
  .circuit-47 {
    width: 24px;
    height: 24px;
  }

  .circuit-47 svg {
    width: 25%;
  }
}

.circuit-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-42 {
  width: 100%;
  height: 2px;
  overflow: hidden;
  background-color: #EEF0F2;
  border-radius: 5px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-42:after {
  content: '';
  display: block;
  background-color: #0F131A;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  height: 100%;
}

<div
  aria-label="gallery"
  class="circuit-63 circuit-64"
>
  <div
    class="circuit-36 circuit-37"
  >
    <div
      class="circuit-10 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="doggy"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/600"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-22 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="doggy dog"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/700"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-34 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="woof woof"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/800"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-61 circuit-62"
  >
    <p
      class="circuit-38 circuit-39 circuit-40 circuit-41"
    >
      1
       / 
      3
    </p>
    <div
      class="circuit-42 circuit-43"
    />
    <div
      class="circuit-59 circuit-60"
    >
      <button
        aria-label="play"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 12.79L10 17l8-9"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label="previous"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 8l-4 4 4 4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label="next"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 16l4-4-4-4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel styles should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(102%);
    -ms-transform: translateX(102%);
    transform: translateX(102%);
  }
}

.circuit-63 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-10 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-8 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-6 {
  width: 100%;
}

.circuit-4 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #FAFBFC;
}

.circuit-1 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-1 img {
  object-fit: cover;
}

.circuit-22 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-34 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-61 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-40 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (min-width:480px) {
  .circuit-40 {
    font-size: 16px;
    line-height: 24px;
  }
}

@media (max-width:479px) {
  .circuit-40 {
    font-size: 13px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-40 {
    margin-right: 12px;
  }
}

.circuit-42 {
  width: 100%;
  height: 2px;
  overflow: hidden;
  background-color: #EEF0F2;
  border-radius: 5px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-42:after {
  content: '';
  display: block;
  background-color: #0F131A;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  height: 100%;
}

.circuit-59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-59 {
    margin-left: 12px;
  }
}

.circuit-47 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: #D8DDE1;
  width: 32px;
  height: 32px;
  padding: 0;
  overflow: hidden;
  border-radius: 50%;
  margin-left: 8px;
}

.circuit-47:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-47:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-47:hover {
  background-color: #D8DDE1;
}

.circuit-47:hover,
.circuit-47:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-47[href] {
  display: inline-block;
}

.circuit-47:disabled,
.circuit-47[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-47:first-of-type {
  margin-left: 0;
}

.circuit-47:active,
.circuit-47:focus,
.circuit-47:hover {
  padding: 0;
}

@media (max-width:479px) {
  .circuit-47 {
    width: 24px;
    height: 24px;
  }

  .circuit-47 svg {
    width: 25%;
  }
}

.circuit-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  aria-label="gallery"
  class="circuit-63 circuit-64"
>
  <div
    class="circuit-36 circuit-37"
  >
    <div
      class="circuit-10 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="doggy"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/600"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-22 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="doggy dog"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/700"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-34 circuit-11"
      width="100%"
    >
      <div
        class="circuit-8 circuit-9"
      >
        <div
          class="circuit-6 circuit-7"
          width="100%"
        >
          <div
            class="circuit-3 circuit-4 circuit-5"
          >
            <img
              alt="woof woof"
              class="circuit-0 circuit-1 circuit-2"
              src="https://placedog.net/800"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-61 circuit-62"
  >
    <p
      class="circuit-38 circuit-39 circuit-40 circuit-41"
    >
      1
       / 
      3
    </p>
    <div
      class="circuit-42 circuit-43"
    />
    <div
      class="circuit-59 circuit-60"
    >
      <button
        aria-label="pause"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 5l14 14m0-14L5 19"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label="previous"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 8l-4 4 4 4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label="next"
        class="circuit-46 circuit-47 circuit-48"
      >
        <div
          class="circuit-44 circuit-45"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 16l4-4-4-4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel styles should render without controls 1`] = `null`;
